compiler/test/integration/nm5_ann.brm
val m: __int = n
val n: __int = 5
